--- a/src/components/CadastroPratos/styles.css
+++ b/src/components/CadastroPratos/styles.css
@@ -27,7 +27,7 @@
     object-fit: cover;
     width: 300px;
     max-height: 80vh;
-    overflow-y: hidden;
+    overflow-y: scroll;
     background-color: whitesmoke;
     z-index: 1;
     position: absolute;
